--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="src/main.css">
 </head>
 
 <body>
@@ -16,6 +16,7 @@
         <svg xmlns="http://www.w3.org/2000/svg"></svg>
     </div>
 
+    <script src="src/svg.editor.js"></script>
     <script src="main.js"></script>
 
 
