adding resposive path

--- a/example/index.html
+++ b/example/index.html
@@ -12,10 +12,13 @@
 
 <body>
 
-    <div id="drawing">
-        <svg xmlns="http://www.w3.org/2000/svg"></svg>
+    <div class="drawing">
+        <svg xmlns="http://www.w3.org/2000/svg">
+            <path id="mypath"></path>
+        </svg>
     </div>
 
+    <script src="../src/svg.responsive.js"></script>
     <script src="../src/svg.editor.js"></script>
     <script src="main.js"></script>
 
