added responsive example

--- a/example/index.html
+++ b/example/index.html
@@ -14,7 +14,7 @@
 
     <div class="drawing">
         <svg xmlns="http://www.w3.org/2000/svg">
-            <path id="mypath"></path>
+            <!-- <path id="mypath"></path> -->
         </svg>
     </div>
 
